--- a/index.ipynb
+++ b/index.ipynb
@@ -779,9 +779,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "marker": {
+          "color": "blue"
+         },
+         "name": "Our nice line",
+         "type": "scatter",
+         "uid": "497dbe30-e07a-11e8-ba1a-0242ac11003e",
+         "x": [
+          1.5,
+          2.5,
+          3.5,
+          4.5
+         ],
+         "y": [
+          3,
+          5,
+          7,
+          9
+         ]
+        }
+       ],
+       "layout": {
+        "title": "Scatter Plot",
+        "xaxis": {
+         "range": [
+          1,
+          10
+         ]
+        },
+        "yaxis": {
+         "range": [
+          1,
+          10
+         ]
+        }
+       }
+      },
+      "text/html": [
+       "<div id=\"139674f8-39c7-4621-91ab-abeb136fb8db\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"139674f8-39c7-4621-91ab-abeb136fb8db\", [{\"marker\": {\"color\": \"blue\"}, \"name\": \"Our nice line\", \"x\": [1.5, 2.5, 3.5, 4.5], \"y\": [3, 5, 7, 9], \"type\": \"scatter\", \"uid\": \"4985d25a-e07a-11e8-ba1a-0242ac11003e\"}], {\"title\": \"Scatter Plot\", \"xaxis\": {\"range\": [1, 10]}, \"yaxis\": {\"range\": [1, 10]}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"139674f8-39c7-4621-91ab-abeb136fb8db\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"139674f8-39c7-4621-91ab-abeb136fb8db\", [{\"marker\": {\"color\": \"blue\"}, \"name\": \"Our nice line\", \"x\": [1.5, 2.5, 3.5, 4.5], \"y\": [3, 5, 7, 9], \"type\": \"scatter\", \"uid\": \"4985d25a-e07a-11e8-ba1a-0242ac11003e\"}], {\"title\": \"Scatter Plot\", \"xaxis\": {\"range\": [1, 10]}, \"yaxis\": {\"range\": [1, 10]}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "layout = {'title': 'Scatter Plot', 'xaxis': {'range': [1, 10]}, 'yaxis': {'range': [1, 10]}}\n",
     "trace_of_data = {'x': [1.5, 2.5, 3.5, 4.5], 'y': [3, 5, 7, 9], 'marker': {'color': 'blue'}, 'name': 'Our nice line'}\n",
